--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
               <li><strong>free wifi</strong> <span style="opacity:.75">(1:48)</span></li>
             </ol>
 
-            <div class="noteMeta">Zawartość jest statyczna (demo). Jeśli chcesz, mogę dodać wyszukiwarkę lub więcej notatek.</div>
+            <div class="noteMeta">Zawartość jest statyczna (demo). </div>
           </div>
         </main>
       </div>
