--- a/index.html
+++ b/index.html
@@ -1077,11 +1077,12 @@
             <span>wideo</span>
           </button>
 
-          <button class="finderItem" type="button">
-            <img src="drive.png" alt="" class="finderIcon">
-            <span>setlista</span>
-            <div class="fileBadge">plik</div>
-          </button>
+        <button class="finderItem" id="openSetlista" type="button">
+  <img src="drive.png" alt="" class="finderIcon">
+  <span>setlista</span>
+  <div class="fileBadge">plik</div>
+</button>
+
 
           <button class="finderItem" type="button">
             <img src="drive.png" alt="" class="finderIcon">
