--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,98 @@
     </div>
   </div>
 
+
+  <script>
+  // ====== MAINTENANCE MODE ======
+  // true = wszyscy widzą ekran blokady
+  const MAINTENANCE = true;
+
+  // Zmień hasło (to tylko "soft lock", nie jest super secure)
+  const PASSWORD = "g0dwifi";
+
+  function isUnlocked() {
+    const params = new URLSearchParams(location.search);
+    if (params.get("unlock") === PASSWORD) return true;
+    if (localStorage.getItem("godwifi_unlocked") === "1") return true;
+    return false;
+  }
+
+  function showLockScreen() {
+    document.documentElement.style.background = "#0b0b0c";
+    document.body.innerHTML = `
+      <div style="
+        min-height:100vh; display:grid; place-items:center;
+        font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial,sans-serif;
+        color: rgba(255,255,255,.92);
+        background: radial-gradient(900px 520px at 18% 18%, rgba(120,122,255,.28), transparent 60%),
+                    radial-gradient(780px 420px at 86% 28%, rgba(255,120,200,.22), transparent 62%),
+                    linear-gradient(180deg,#0f1220,#050509);
+      ">
+        <div style="
+          width:min(420px,92vw);
+          padding:22px 18px;
+          border-radius:18px;
+          background: rgba(255,255,255,.12);
+          border:1px solid rgba(255,255,255,.18);
+          backdrop-filter: blur(18px);
+          box-shadow: 0 30px 90px rgba(0,0,0,.45);
+          text-align:center;
+        ">
+          <div style="font-size:14px; opacity:.85; margin-bottom:10px;">godwifi</div>
+          <div style="font-size:18px; font-weight:700; margin-bottom:10px;">Tryb testów</div>
+          <div style="font-size:13px; opacity:.75; margin-bottom:14px;">
+            Strona chwilowo niedostępna. Jeśli masz dostęp, wpisz hasło.
+          </div>
+
+          <input id="pw" type="password" placeholder="Hasło"
+            style="
+              width:100%; padding:12px 12px; border-radius:12px;
+              border:1px solid rgba(255,255,255,.18);
+              background: rgba(255,255,255,.10);
+              color: rgba(255,255,255,.92);
+              outline:none;
+            " />
+
+          <button id="go"
+            style="
+              width:100%; margin-top:10px; padding:12px 12px;
+              border-radius:12px; border:1px solid rgba(255,255,255,.18);
+              background: rgba(255,255,255,.18);
+              color: rgba(255,255,255,.92);
+              font-weight:700;
+              cursor:pointer;
+            "
+          >Wejdź</button>
+
+          <div id="err" style="margin-top:10px; font-size:12px; opacity:.7;"></div>
+        </div>
+      </div>
+    `;
+
+    const pw = document.getElementById("pw");
+    const go = document.getElementById("go");
+    const err = document.getElementById("err");
+
+    function attempt() {
+      if (pw.value === PASSWORD) {
+        localStorage.setItem("godwifi_unlocked", "1");
+        location.href = location.origin + location.pathname; // bez parametru
+      } else {
+        err.textContent = "Złe hasło.";
+      }
+    }
+
+    go.addEventListener("click", attempt);
+    pw.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") attempt();
+    });
+  }
+
+  if (MAINTENANCE && !isUnlocked()) {
+    // zanim reszta strony się wyrenderuje
+    document.addEventListener("DOMContentLoaded", showLockScreen);
+  }
+</script>
 <script>
   // ===== LINKS =====
   const IG_GUMIS = "https://instagram.com/tokarz_k";
