--- a/index.html
+++ b/index.html
@@ -611,9 +611,11 @@
   .dockimg{
     width:28px;
     height:28px;
-    object-fit:contain;
+    object-fit:cover;
     display:block;
     pointer-events:none;
+    border-radius:8px;
+    overflow:hidden;
     filter: drop-shadow(0 10px 18px rgba(0,0,0,.20));
   }
 
