--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     user-select:none;
   }
 
-  /* ===== Desktop wallpaper ===== */
+  /* ===== tapeta ===== */
   .wallpaper{
     position:fixed; inset:-80px;
     background:
@@ -154,7 +154,7 @@
     font-size:12px;
   }
 
-  /* ===== Battery ===== */
+  /* ===== Bateryjka ===== */
   .battery{
     display:flex;
     align-items:center;
