--- a/index.html
+++ b/index.html
@@ -871,10 +871,142 @@
   @media (prefers-reduced-motion: reduce){
     .app, .menuWrap, .logo{ transition:none !important; }
   }
+  /* ===== Mobile block screen ===== */
+.mobileBlock{
+  position:fixed;
+  inset:0;
+  z-index:9999;
+  display:none;
+  padding:22px;
+  color: rgba(255,255,255,.92);
+  background:
+    radial-gradient(900px 520px at 18% 18%, rgba(120,122,255,.28), transparent 60%),
+    radial-gradient(780px 420px at 86% 28%, rgba(255,120,200,.22), transparent 62%),
+    radial-gradient(820px 520px at 52% 86%, rgba(120,255,210,.18), transparent 62%),
+    linear-gradient(180deg,#0f1220,#050509);
+  backdrop-filter: blur(18px);
+  -webkit-backdrop-filter: blur(18px);
+}
+
+.mobileBlockCard{
+  max-width:520px;
+  margin:0 auto;
+  border-radius:22px;
+  border:1px solid rgba(255,255,255,.18);
+  background: rgba(255,255,255,.12);
+  box-shadow: 0 50px 140px rgba(0,0,0,.55);
+  padding:18px 18px 16px;
+}
+
+.mobileBlockTop{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:12px;
+  margin-bottom:14px;
+  padding:8px 10px;
+  border-radius:16px;
+  background: rgba(255,255,255,.10);
+  border:1px solid rgba(255,255,255,.12);
+}
+
+.mobileTraffic{ display:flex; gap:8px; }
+.mobileDot{ width:12px; height:12px; border-radius:50%; }
+.mobileDot.red{ background:#ff5f57; }
+.mobileDot.yellow{ background:#ffbd2e; }
+.mobileDot.green{ background:#28c840; }
+
+.mobileTitle{
+  font-size:13px;
+  opacity:.88;
+}
+
+.mobileBlockBody{
+  padding:6px 6px 0;
+  text-align:left;
+}
+
+.mobileH1{
+  font-size:18px;
+  margin:8px 0 8px;
+  letter-spacing:.2px;
+}
+
+.mobileP{
+  margin:0 0 14px;
+  opacity:.85;
+  line-height:1.35;
+  font-size:14px;
+}
+
+.mobileMeta{
+  font-size:12px;
+  opacity:.7;
+  margin-top:10px;
+}
+
+.mobileActions{
+  display:flex;
+  gap:10px;
+  margin-top:14px;
+  flex-wrap:wrap;
+}
+
+.mobileBtn{
+  border:1px solid rgba(255,255,255,.20);
+  background: rgba(255,255,255,.14);
+  color: rgba(255,255,255,.92);
+  padding:10px 12px;
+  border-radius:999px;
+  cursor:pointer;
+  font-weight:600;
+  font-size:13px;
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  transition:.15s ease;
+}
+
+.mobileBtn:hover{ background: rgba(255,255,255,.20); }
+.mobileBtn.primary{
+  background: rgba(88,101,242,.92);
+  border-color: rgba(255,255,255,.18);
+}
+.mobileBtn.primary:hover{ background: rgba(88,101,242,1); }
+
 </style>
 </head>
 
 <body>
+  <!-- Mobile / unknown device overlay -->
+<div class="mobileBlock" id="mobileBlock" role="dialog" aria-modal="true" aria-label="Nieznane urządzenie">
+  <div class="mobileBlockCard">
+    <div class="mobileBlockTop">
+      <div class="mobileTraffic" aria-hidden="true">
+        <div class="mobileDot red"></div>
+        <div class="mobileDot yellow"></div>
+        <div class="mobileDot green"></div>
+      </div>
+      <div class="mobileTitle">godwifi</div>
+      <div style="width:52px;"></div>
+    </div>
+
+    <div class="mobileBlockBody">
+      <div class="mobileH1">Nieznane urządzenie</div>
+      <p class="mobileP">
+        Ta strona jest zrobiona pod desktop (macOS). Na telefonie wygląda słabo i część rzeczy nie działa jak trzeba.
+        Wejdź proszę na komputerze.
+      </p>
+
+      <div class="mobileActions">
+        <button class="mobileBtn primary" id="copyLinkBtn" type="button">Skopiuj link</button>
+        <button class="mobileBtn" id="continueAnywayBtn" type="button">Kontynuuj mimo to</button>
+      </div>
+
+      <div class="mobileMeta" id="mobileMeta"></div>
+    </div>
+  </div>
+</div>
+
   <div class="wallpaper" aria-hidden="true"></div>
   <div class="brandBlur" aria-hidden="true"></div>
   <div class="grain" aria-hidden="true"></div>
