--- a/index.html
+++ b/index.html
@@ -1350,9 +1350,9 @@
 
 
   <script>
-  // ====== MAINTENANCE MODE ======
+  // ====== MAINTENANCE MODE  (test/tryb) ======
  
-  const MAINTENANCE = true;
+  const MAINTENANCE = false;
 
  
   const PASSWORD = "g0dwifi";
