--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     background: rgba(255,255,255,.4);
   }
 
-  /* ===== Desktop icons (Ubuntu-style grid) ===== */
+  /* ===== Desktop icons  ===== */
   .icons{
     position:fixed;
     top:20px;
@@ -237,7 +237,7 @@
     border-radius:6px;
   }
 
-  /* ===== Window system (Windows/Ubuntu hybrid) ===== */
+  /* ===== Window system ===== */
   .stage{
     position:fixed;
     inset:0 0 48px 0;
@@ -275,7 +275,7 @@
     cursor:move;
   }
 
-  /* Ubuntu-style titlebar */
+  
   .titlebar{
     height:36px;
     display:flex;
