--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
 <style>
   :root{
-    --shadow: 0 20px 60px rgba(0,0,0,.6);
-    --border: rgba(0,0,0,.3);
-    --text: rgba(255,255,255,.95);
-    --muted: rgba(255,255,255,.75);
+    --shadow: 0 20px 60px rgba(0,0,0,.25);
+    --border: rgba(0,0,0,.15);
+    --text: rgba(0,0,0,.9);
+    --muted: rgba(0,0,0,.6);
 
-    --taskbarBg: rgba(30,30,35,.96);
-    --taskbarBorder: rgba(255,255,255,.08);
+    --taskbarBg: rgba(240,240,245,.98);
+    --taskbarBorder: rgba(0,0,0,.12);
 
-    --windowBg: rgba(40,40,45,.95);
-    --windowBorder: rgba(255,255,255,.15);
+    --windowBg: rgba(250,250,252,.96);
+    --windowBorder: rgba(0,0,0,.15);
     
-    --titlebarBg: rgba(50,50,55,.98);
-    --titlebarBorder: rgba(255,255,255,.1);
+    --titlebarBg: rgba(240,240,245,.98);
+    --titlebarBorder: rgba(0,0,0,.1);
   }
 
   *{ box-sizing:border-box; }
@@ -38,35 +38,33 @@
   /* ===== Wallpaper ===== */
   .wallpaper{
     position:fixed; inset:0;
-    background:
-      radial-gradient(900px 520px at 25% 25%, rgba(80,120,255,.20), transparent 60%),
-      radial-gradient(780px 420px at 75% 35%, rgba(200,80,255,.18), transparent 62%),
-      radial-gradient(820px 520px at 50% 80%, rgba(80,200,255,.15), transparent 62%),
-      linear-gradient(180deg,#0a0c14,#050507);
-    filter:saturate(115%) contrast(105%);
+    background: #ffffff;
+    display: grid;
+    place-items: center;
+  }
+
+  .wallpaper::after{
+    content: "Macie tu Wifi?...";
+    font-size: clamp(32px, 5vw, 72px);
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.08);
+    letter-spacing: 2px;
+    text-align: center;
+    padding: 0 20px;
+    font-family: "Segoe UI", Ubuntu, "DejaVu Sans", sans-serif;
   }
 
   .grain{
     position:fixed; inset:0;
     pointer-events:none;
-    opacity:.08;
+    opacity:.02;
     background-image:
-      radial-gradient(circle at 20% 30%, rgba(255,255,255,.06), transparent 40%);
+      radial-gradient(circle at 20% 30%, rgba(0,0,0,.03), transparent 40%);
     mix-blend-mode: overlay;
   }
 
   .brandBlur{
-    position:fixed; inset:0;
-    display:grid; place-items:center;
-    pointer-events:none;
-  }
-  .brandBlur::before{
-    content:"";
-    width:min(480px,75vw);
-    height:min(480px,75vw);
-    background:url("freewifi.png") center/contain no-repeat;
-    opacity:.12;
-    filter: blur(100px) saturate(130%);
+    display: none;
   }
 
   /* ===== Windows-style Taskbar (bottom) ===== */
@@ -99,15 +97,16 @@
     height:36px;
     display:grid;
     place-items:center;
-    background: rgba(255,255,255,.08);
-    border:1px solid rgba(255,255,255,.12);
+    background: rgba(0,0,0,.05);
+    border:1px solid rgba(0,0,0,.08);
     border-radius:4px;
     cursor:pointer;
     font-size:20px;
+    color: rgba(0,0,0,.7);
     transition:.15s ease;
   }
   .start-btn:hover{
-    background: rgba(255,255,255,.14);
+    background: rgba(0,0,0,.08);
   }
 
   .taskbar-app{
@@ -118,18 +117,19 @@
     display:flex;
     align-items:center;
     gap:8px;
-    background: rgba(255,255,255,.06);
-    border:1px solid rgba(255,255,255,.08);
+    background: rgba(0,0,0,.04);
+    border:1px solid rgba(0,0,0,.06);
     border-radius:4px;
     cursor:pointer;
     transition:.15s ease;
     font-size:13px;
+    color: rgba(0,0,0,.85);
   }
   .taskbar-app:hover{
-    background: rgba(255,255,255,.12);
+    background: rgba(0,0,0,.06);
   }
   .taskbar-app.active{
-    background: rgba(255,255,255,.14);
+    background: rgba(0,0,0,.08);
     border-bottom:2px solid rgba(80,150,255,.9);
   }
 
@@ -157,9 +157,10 @@
     border-radius:4px;
     cursor:pointer;
     transition:.15s ease;
+    color: rgba(0,0,0,.8);
   }
   .tray-icon:hover{
-    background: rgba(255,255,255,.1);
+    background: rgba(0,0,0,.06);
   }
 
   .battery{
@@ -167,21 +168,22 @@
     align-items:center;
     gap:6px;
     font-size:12px;
+    color: rgba(0,0,0,.85);
   }
   .batteryIcon{
     width:22px;
     height:11px;
     border-radius:3px;
-    border:1.5px solid rgba(255,255,255,.4);
+    border:1.5px solid rgba(0,0,0,.3);
     position:relative;
     overflow:hidden;
-    background: rgba(0,0,0,.3);
+    background: rgba(0,0,0,.05);
   }
   .batteryLevel{
     position:absolute;
     left:0; top:0; bottom:0;
     width:50%;
-    background: rgba(140,255,170,.95);
+    background: rgba(60,200,100,.9);
   }
   .batteryCap{
     position:absolute;
@@ -190,10 +192,10 @@
     width:2.5px;
     height:6px;
     border-radius:2px;
-    background: rgba(255,255,255,.4);
+    background: rgba(0,0,0,.3);
   }
 
-  /* ===== Desktop icons  ===== */
+  /* ===== Desktop icons (Ubuntu-style grid) ===== */
   .icons{
     position:fixed;
     top:20px;
@@ -208,7 +210,8 @@
     text-align:center;
     font-size:12px;
     line-height:1.3;
-    text-shadow: 0 1px 3px rgba(0,0,0,.8);
+    text-shadow: 0 1px 2px rgba(255,255,255,.8);
+    color: rgba(0,0,0,.85);
     cursor:pointer;
   }
 
@@ -219,15 +222,15 @@
     border-radius:8px;
     display:grid;
     place-items:center;
-    background: rgba(255,255,255,.1);
-    border:1px solid rgba(255,255,255,.15);
+    background: rgba(0,0,0,.04);
+    border:1px solid rgba(0,0,0,.08);
     backdrop-filter: blur(8px);
-    box-shadow: 0 4px 12px rgba(0,0,0,.3);
+    box-shadow: 0 2px 8px rgba(0,0,0,.08);
     transition:.15s ease;
   }
   .icon:hover .pic{
     transform: scale(1.05);
-    background: rgba(255,255,255,.15);
+    background: rgba(0,0,0,.06);
   }
 
   .deskIconImg{
@@ -237,7 +240,7 @@
     border-radius:6px;
   }
 
-  /* ===== Window system ===== */
+  /* ===== Window system (Windows/Ubuntu hybrid) ===== */
   .stage{
     position:fixed;
     inset:0 0 48px 0;
@@ -275,7 +278,7 @@
     cursor:move;
   }
 
-  
+  /* Ubuntu-style titlebar */
   .titlebar{
     height:36px;
     display:flex;
@@ -328,13 +331,14 @@
   .title{
     font-size:13px;
     font-weight:600;
-    color: rgba(255,255,255,.9);
+    color: rgba(0,0,0,.85);
     letter-spacing:.3px;
   }
 
   .content{
     padding:32px 24px 24px;
     text-align:center;
+    color: rgba(0,0,0,.9);
   }
 
   .logoBtn{
@@ -371,24 +375,25 @@
 
   .menu a{
     text-decoration:none;
-    color: rgba(255,255,255,.95);
+    color: rgba(0,0,0,.9);
     border-radius:6px;
     padding:13px 16px;
     font-size:14px;
     font-weight:600;
     text-align:center;
-    background: rgba(255,255,255,.12);
-    border:1px solid rgba(255,255,255,.18);
-    box-shadow: 0 2px 8px rgba(0,0,0,.3);
+    background: rgba(0,0,0,.06);
+    border:1px solid rgba(0,0,0,.1);
+    box-shadow: 0 1px 4px rgba(0,0,0,.08);
     transition:.15s ease;
   }
   .menu a:hover{
-    background: rgba(255,255,255,.18);
+    background: rgba(0,0,0,.08);
     transform: translateY(-1px);
   }
   .menu a.discord{
     background: rgba(88,101,242,.9);
-    border:1px solid rgba(255,255,255,.2);
+    border:1px solid rgba(88,101,242,1);
+    color: rgba(255,255,255,.98);
   }
   .menu a.discord:hover{ background: rgba(88,101,242,1); }
 
@@ -402,11 +407,11 @@
   }
   .finderItem{
     border:0;
-    background: rgba(255,255,255,.08);
-    border:1px solid rgba(255,255,255,.12);
+    background: rgba(0,0,0,.04);
+    border:1px solid rgba(0,0,0,.08);
     border-radius:6px;
     padding:14px 12px;
-    color: rgba(255,255,255,.95);
+    color: rgba(0,0,0,.9);
     display:grid;
     place-items:center;
     gap:8px;
@@ -414,7 +419,7 @@
     transition:.12s ease;
   }
   .finderItem:hover{
-    background: rgba(255,255,255,.14);
+    background: rgba(0,0,0,.06);
     transform: translateY(-2px);
   }
   .finderIcon{
@@ -427,8 +432,9 @@
     font-size:12px;
     opacity:.7;
     padding:10px 16px;
-    background: rgba(0,0,0,.2);
-    border-bottom:1px solid rgba(255,255,255,.08);
+    background: rgba(0,0,0,.03);
+    border-bottom:1px solid rgba(0,0,0,.06);
+    color: rgba(0,0,0,.8);
   }
   .fileBadge{
     font-size:11px;
@@ -442,34 +448,38 @@
     display:flex;
     min-height:400px;
     height:min(58vh,580px);
-    background: rgba(30,30,35,.95);
+    background: rgba(250,250,252,.95);
   }
   .notesSidebar{
     width:220px;
-    border-right:1px solid rgba(255,255,255,.1);
-    background: rgba(20,20,25,.95);
+    border-right:1px solid rgba(0,0,0,.08);
+    background: rgba(245,245,248,.95);
     padding:12px;
   }
   .notesSideTitle{
     font-size:12px;
     opacity:.7;
     margin-bottom:8px;
+    color: rgba(0,0,0,.8);
   }
   .notesItem{
-    background: rgba(255,255,255,.08);
-    border:1px solid rgba(255,255,255,.1);
+    background: rgba(0,0,0,.04);
+    border:1px solid rgba(0,0,0,.06);
     border-radius:6px;
     padding:10px;
+    color: rgba(0,0,0,.9);
   }
   .notesEditor{
     flex:1;
     padding:16px;
+    color: rgba(0,0,0,.9);
   }
   .notePaper{
-    background: rgba(255,255,255,.05);
+    background: rgba(255,255,255,.8);
     border-radius:6px;
     padding:16px;
-    border:1px solid rgba(255,255,255,.1);
+    border:1px solid rgba(0,0,0,.08);
+    color: rgba(0,0,0,.9);
   }
 
   /* ===== Game ===== */
@@ -480,16 +490,17 @@
     justify-content:space-between;
     margin-bottom:10px;
     font-size:13px;
+    color: rgba(0,0,0,.85);
   }
   canvas#dinoCanvas{
     width:100%;
     height:220px;
     border-radius:6px;
-    border:1px solid rgba(255,255,255,.15);
-    background: rgba(20,20,25,.9);
-    box-shadow: 0 8px 24px rgba(0,0,0,.4);
+    border:1px solid rgba(0,0,0,.12);
+    background: rgba(245,245,248,.95);
+    box-shadow: 0 4px 16px rgba(0,0,0,.1);
   }
-  .gameHint{ margin-top:10px; font-size:12px; opacity:.7; }
+  .gameHint{ margin-top:10px; font-size:12px; opacity:.7; color: rgba(0,0,0,.7); }
 
   /* ===== Player ===== */
   .player{ padding:16px; text-align:left; }
@@ -500,8 +511,8 @@
     gap:12px;
     padding:10px 12px;
     border-radius:6px;
-    background: rgba(255,255,255,.08);
-    border:1px solid rgba(255,255,255,.12);
+    background: rgba(0,0,0,.04);
+    border:1px solid rgba(0,0,0,.08);
   }
   .now{ min-width:0; }
   .now .title{
@@ -510,22 +521,23 @@
     white-space:nowrap;
     overflow:hidden;
     text-overflow:ellipsis;
+    color: rgba(0,0,0,.9);
   }
-  .now .meta{ font-size:12px; opacity:.7; margin-top:2px; }
+  .now .meta{ font-size:12px; opacity:.7; margin-top:2px; color: rgba(0,0,0,.7); }
   .ctrl{ display:flex; gap:8px; }
   .mbtn{
     width:32px; height:32px;
     border-radius:6px;
-    border:1px solid rgba(255,255,255,.15);
-    background: rgba(255,255,255,.08);
-    color: var(--text);
+    border:1px solid rgba(0,0,0,.12);
+    background: rgba(0,0,0,.04);
+    color: rgba(0,0,0,.8);
     cursor:pointer;
     display:grid;
     place-items:center;
     transition:.12s ease;
   }
-  .mbtn:hover{ background: rgba(255,255,255,.14); }
-  .mbtn.on{ background: rgba(80,150,255,.6); }
+  .mbtn:hover{ background: rgba(0,0,0,.08); }
+  .mbtn.on{ background: rgba(80,150,255,.6); color: rgba(255,255,255,.95); }
   .playBig{ width:40px; height:40px; font-weight:700; }
   .vol{ display:flex; gap:8px; min-width:140px; align-items:center; }
   .vol span{ font-size:12px; }
@@ -534,13 +546,13 @@
     margin-top:12px;
     padding:10px 12px;
     border-radius:6px;
-    background: rgba(0,0,0,.2);
-    border:1px solid rgba(255,255,255,.1);
+    background: rgba(0,0,0,.02);
+    border:1px solid rgba(0,0,0,.06);
   }
   .pbar{
     height:8px;
     border-radius:4px;
-    background: rgba(255,255,255,.1);
+    background: rgba(0,0,0,.06);
     overflow:hidden;
     cursor:pointer;
   }
@@ -556,20 +568,21 @@
     font-size:12px;
     opacity:.7;
     margin-top:6px;
+    color: rgba(0,0,0,.7);
   }
   .trackList{
     margin-top:12px;
     border-radius:6px;
     overflow:hidden;
-    border:1px solid rgba(255,255,255,.1);
-    background: rgba(0,0,0,.2);
+    border:1px solid rgba(0,0,0,.08);
+    background: rgba(0,0,0,.02);
   }
   .track{
     display:flex;
     justify-content:space-between;
     padding:12px;
     cursor:pointer;
-    border-bottom:1px solid rgba(255,255,255,.08);
+    border-bottom:1px solid rgba(0,0,0,.06);
     transition:.12s ease;
   }
   .track:last-child{ border-bottom:0; }
@@ -580,46 +593,49 @@
     white-space:nowrap;
     overflow:hidden;
     text-overflow:ellipsis;
+    color: rgba(0,0,0,.9);
   }
-  .track .sub{ font-size:12px; opacity:.65; margin-top:2px; }
-  .track .right{ font-size:12px; opacity:.7; }
-  .track:hover{ background: rgba(255,255,255,.06); }
-  .track.active{ background: rgba(80,150,255,.2); }
-  .playerHint{ margin-top:10px; font-size:12px; opacity:.7; }
+  .track .sub{ font-size:12px; opacity:.65; margin-top:2px; color: rgba(0,0,0,.65); }
+  .track .right{ font-size:12px; opacity:.7; color: rgba(0,0,0,.7); }
+  .track:hover{ background: rgba(0,0,0,.04); }
+  .track.active{ background: rgba(80,150,255,.15); }
+  .playerHint{ margin-top:10px; font-size:12px; opacity:.7; color: rgba(0,0,0,.7); }
 
   /* ===== iCloud Photos ===== */
   .icloudTop{
     padding:12px 16px;
-    border-bottom:1px solid rgba(255,255,255,.1);
+    border-bottom:1px solid rgba(0,0,0,.08);
     display:flex;
     justify-content:space-between;
     gap:12px;
   }
-  .icloudH1{ font-size:14px; font-weight:800; }
+  .icloudH1{ font-size:14px; font-weight:800; color: rgba(0,0,0,.9); }
   .icloudTabs{
     margin-top:8px;
     display:flex;
     gap:6px;
   }
   .icloudTab{
-    border:1px solid rgba(255,255,255,.15);
-    background: rgba(255,255,255,.08);
+    border:1px solid rgba(0,0,0,.12);
+    background: rgba(0,0,0,.04);
     padding:6px 12px;
     border-radius:4px;
     cursor:pointer;
     font-size:12px;
     transition:.12s ease;
+    color: rgba(0,0,0,.8);
   }
-  .icloudTab:hover{ background: rgba(255,255,255,.12); }
+  .icloudTab:hover{ background: rgba(0,0,0,.06); }
   .icloudTab.active{
     background: rgba(80,150,255,.6);
     border-color: rgba(80,150,255,.8);
+    color: rgba(255,255,255,.95);
   }
   .icloudSearch{
     width:min(240px, 40vw);
-    border:1px solid rgba(255,255,255,.12);
-    background: rgba(0,0,0,.3);
-    color: var(--text);
+    border:1px solid rgba(0,0,0,.12);
+    background: rgba(255,255,255,.6);
+    color: rgba(0,0,0,.9);
     padding:8px 12px;
     border-radius:4px;
     outline:none;
@@ -634,8 +650,8 @@
     aspect-ratio:1/1;
     border-radius:6px;
     overflow:hidden;
-    background: rgba(255,255,255,.06);
-    border:1px solid rgba(255,255,255,.1);
+    background: rgba(0,0,0,.04);
+    border:1px solid rgba(0,0,0,.08);
     cursor:pointer;
     transition:.12s ease;
   }
@@ -647,7 +663,7 @@
   }
   .photoTile.loading{
     cursor:default;
-    background: linear-gradient(90deg, rgba(255,255,255,.04), rgba(255,255,255,.1), rgba(255,255,255,.04));
+    background: linear-gradient(90deg, rgba(0,0,0,.02), rgba(0,0,0,.06), rgba(0,0,0,.02));
     background-size:240px 100%;
     animation: shimmer 1.2s infinite linear;
   }
@@ -677,7 +693,7 @@
   .icloudViewerBtn{
     border:1px solid rgba(255,255,255,.15);
     background: rgba(255,255,255,.1);
-    color: var(--text);
+    color: rgba(255,255,255,.95);
     padding:8px 16px;
     border-radius:4px;
     cursor:pointer;
@@ -686,7 +702,7 @@
     transition:.12s ease;
   }
   .icloudViewerBtn:hover{ background: rgba(255,255,255,.15); }
-  .icloudViewerTitle{ font-size:13px; font-weight:700; }
+  .icloudViewerTitle{ font-size:13px; font-weight:700; color: rgba(255,255,255,.95); }
   .icloudViewerBody{
     height:calc(100vh - 48px);
     display:grid;
@@ -1301,9 +1317,9 @@
     batteryLevelEl.style.width = pct + "%";
     batteryPctEl.textContent = pct + "%";
 
-    if (pct < 15) batteryLevelEl.style.background = "rgba(255,95,87,.95)";
-    else if (pct < 35) batteryLevelEl.style.background = "rgba(255,189,46,.95)";
-    else batteryLevelEl.style.background = "rgba(140,255,170,.95)";
+    if (pct < 15) batteryLevelEl.style.background = "rgba(255,59,48,.9)";
+    else if (pct < 35) batteryLevelEl.style.background = "rgba(255,149,0,.9)";
+    else batteryLevelEl.style.background = "rgba(52,199,89,.9)";
   }
   renderBattery();
   setInterval(renderBattery, 30000);
@@ -1802,22 +1818,22 @@
     ctx.moveTo(0, groundY+34);
     ctx.lineTo(canvas.width, groundY+34);
     ctx.lineWidth = 2;
-    ctx.strokeStyle = "rgba(255,255,255,.3)";
+    ctx.strokeStyle = "rgba(0,0,0,.25)";
     ctx.stroke();
     ctx.globalAlpha = 1;
 
-    ctx.fillStyle = "rgba(255,255,255,.92)";
+    ctx.fillStyle = "rgba(0,0,0,.85)";
     ctx.fillRect(player.x, player.y, player.w, player.h);
 
-    ctx.fillStyle = "rgba(255,255,255,.6)";
+    ctx.fillStyle = "rgba(0,0,0,.6)";
     obstacles.forEach(o => ctx.fillRect(o.x, o.y, o.w, o.h));
 
-    ctx.globalAlpha = 0.1;
+    ctx.globalAlpha = 0.08;
     for (let i=0;i<4;i++){
       const cx = (i*260 + (score*2)%260);
       ctx.beginPath();
       ctx.ellipse(cx, 70 + i*8, 42, 18, 0, 0, Math.PI*2);
-      ctx.fillStyle = "rgba(255,255,255,1)";
+      ctx.fillStyle = "rgba(0,0,0,1)";
       ctx.fill();
     }
     ctx.globalAlpha = 1;
