--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <link rel="preload" as="image" href="freewifi.png" />
 <link rel="icon" type="image/png" href="favicon.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lovers+Quarrel&display=swap" rel="stylesheet">
 
 <style>
   :root{
@@ -106,13 +109,14 @@
 
   .wallpaper::after{
     content: "Macie tu Wifi?...";
-    font-size: clamp(32px, 5vw, 72px);
+    font-size: clamp(36px, 5.5vw, 80px);
     font-weight: 400;
     color: var(--wallpaperText);
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-align: center;
     padding: 0 20px;
-    font-family: Papyrus, "Papyrus", fantasy;
+    font-family: Papyrus, "Papyrus", "Lovers Quarrel", "Brush Script MT", cursive;
+    font-style: normal;
   }
 
   .grain{
