--- a/index.html
+++ b/index.html
@@ -2521,7 +2521,7 @@
 
   <script>
   // ====== MAINTENANCE MODE ======
-  const MAINTENANCE = false;
+  const MAINTENANCE = true;
   const PASSWORD = "g0dwifi";
 
   function isUnlocked() {
